# minifs-extractor

./: .gitignore  Cargo.toml  README.md
src/: main.rs  minifs.rs
